# Lightweight-search-engine

./: .gitignore  CMakeLists.txt  README.md
SearchEngineOnline/: CMakeLists.txt
SearchEngineOnline/data/: stop_words.txt
SearchEngineOnline/include/: Codec.h  KeywordRecommender.h  Message.h  SearchServer.h  WebSearcher.h
SearchEngineOnline/scripts/: prepare_online_data.sh
SearchEngineOnline/src/: Codec.cpp  KeywordRecommender.cpp  SearchServer.cpp  WebSearcher.cpp  client_main.cpp  server_main.cpp  test_keyword.cpp  test_websearch.cpp
keyword/: CMakeLists.txt
keyword/src/: DirectoryScanner.cc  DirectoryScanner.h  KeywordProcessor.cc  KeywordProcessor.h  keyword_builder  main.cc
webpage/: CMakeLists.txt
webpage/src/: DirectoryScanner.cc  PageProcessor.cc  PageProcessor.h  main.cc  webpage_builder
webpage/stopwords/: stopwords_cn.txt
